--- a/web/package.json
+++ b/web/package.json
@@ -13,10 +13,12 @@
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
+    "jwt-decode": "^3.1.2",
     "lucide-react": "^0.246.0",
-    "next": "13.4.5",
+    "next": "^13.4.7",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
